2008-02-01  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c:
	(gssdp_resource_browser_set_property),
	(gssdp_resource_browser_dispose),
	(gssdp_resource_browser_set_active), (clear_cache):

	Emit multiple M-SEARCH requests because UDP is unreliable.
	Based on a patch by Zeeshan Ali.

2008-01-31  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client-private.h:
	* libgssdp/gssdp-client.c: (gssdp_client_class_init),
	(_gssdp_client_send_message), (socket_source_cb):
	* libgssdp/gssdp-marshal.list:
	* libgssdp/gssdp-protocol.h:
	* libgssdp/gssdp-resource-browser.c:
	(gssdp_resource_browser_set_active):
	* libgssdp/gssdp-resource-group.c: (resource_group_timeout),
	(message_received_cb), (construct_al),
	(discovery_response_timeout), (resource_alive), (resource_byebye):
	* libgssdp/gssdp-socket-source.h:

	- Send discovery response to port of origin instead of to SSDP port.
	- Add Date header to discovery response.
	- Add missing G_GNUC_INTERNALs.

2008-01-14  Jorn Baayen  <jorn@openedhand.com>

	* Makefile.am:
	* configure.ac:

	Remove unused translation framework.

2007-09-23  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:
	* configure.ac:

	Release 0.4.1.

2007-09-11  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (setup_treeviews):

	Pass the correct value to n_columns argument of
	gtk_list_store_new(). Fixes bug#501.

2007-09-10  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (setup_treeviews):

	Make sure treemodels get created at the startup.

2007-08-23  Jorn Baayen  <jorn@openedhand.com>

	* gssdp-1.0-uninstalled.pc.in:
	* gssdp-1.0.pc.in:

	Move libsoup req to Requires.Private.

2007-07-27  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client.c: (socket_source_cb):

	Fix compiler warning. Fixes #421.

	Patch by Priit Laes.

2007-07-26  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:

	Updated.

	* configure.ac:

	Bump version number to 0.4.
